--- a/assets/css/fix.css
+++ b/assets/css/fix.css
@@ -70,7 +70,7 @@ body, input, textarea, select {
 
 .dataset-card-container {
 	position: relative;
-	overflow: hidden;
+	overflow: clip;
 	width: 100%;
 	padding-bottom: 14rem;
 	display: flex;
@@ -91,9 +91,9 @@ body, input, textarea, select {
 	justify-self: center;
 	width: 160vw;
     bottom: 0;  
-    right: 0;
+    right: auto;
 	top: 0;
-	left: 0;
+	left: auto;
 }
 
 
@@ -134,11 +134,6 @@ button:active,
 	box-shadow: 0px 0px 0px 0px;
 }
 
-#intro {
-	padding-top: 10rem;
-	padding-bottom: 2rem;
-
-}
 
 	#intro h1 {
 		margin-top: 0.35em;
@@ -152,3 +147,8 @@ button:active,
 		#intro p a {
 			color: inherit;
 		}
+
+#surgery, #supernova, #massmaps, #polite, #emotion, #chestxray {
+	scroll-margin-top: 100px;
+
+}
