--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,7 +243,7 @@ input, select, textarea {
 	hr.hr-divider {
 		flex: 0 0 50px;
 		width:20px;
-		margin:4px;
+		margin:40px;
 		height: 1px;
 		background-color: #d7dff2;
 		border: none;
@@ -835,9 +835,8 @@ input, select, textarea {
 		margin-bottom: 0;
 	}
 
-	#home {
-		padding-top: 10rem;
-		padding-bottom: 2rem;
+	#home, #intro{
+		margin-top: 100px;
 
 	}
 
@@ -876,6 +875,7 @@ input, select, textarea {
 		color: #6E7FAD;
 	}
 
+	
 
 /* Large */
 
